make feature table menu conditions accept rows, visibility