@@ -42,6 +42,7 @@ import io.github.mzmine.datamodel.Scan;
 import io.github.mzmine.datamodel.featuredata.IonMobilogramTimeSeries;
 import io.github.mzmine.datamodel.featuredata.IonTimeSeries;
 import io.github.mzmine.datamodel.features.Feature;
+import io.github.mzmine.datamodel.features.FeatureList;
 import io.github.mzmine.datamodel.features.FeatureListRow;
 import io.github.mzmine.datamodel.features.ModularFeature;
 import io.github.mzmine.datamodel.features.ModularFeatureListRow;
@@ -114,13 +115,14 @@ import io.github.mzmine.util.scans.SpectraMerging;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 import java.util.logging.Logger;
-import java.util.stream.Collectors;
+import javafx.beans.property.BooleanProperty;
+import javafx.beans.property.SimpleBooleanProperty;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
@@ -154,7 +156,12 @@ public class FeatureTableContextMenu extends ContextMenu {
   private List<ModularFeatureListRow> selectedRows;
   @Nullable
   private ModularFeature selectedFeature;
+  private @Nullable ModularFeature selectedOrBestFeature;
   private List<FeatureIdentity> copiedIDs;
+
+  private final BooleanProperty hasIonMobilityData = new SimpleBooleanProperty();
+  private final BooleanProperty hasImagingData = new SimpleBooleanProperty();
+  private final BooleanProperty hasPseudoSpectra = new SimpleBooleanProperty();
 
   FeatureTableContextMenu(final FeatureTableFX table) {
     this.table = table;
@@ -192,6 +199,19 @@ public class FeatureTableContextMenu extends ContextMenu {
             selectedRows.get(0), table.getFeatureList()));
 
     getItems().addAll(new SeparatorMenuItem(), manuallyDefineItem, deleteRowsItem);
+  }
+
+  public void onFeatureListChanged(FeatureList featureList) {
+    if (featureList == null) {
+      return;
+    }
+    hasIonMobilityData.set(
+        featureList.getRawDataFiles().stream().anyMatch(IMSRawDataFile.class::isInstance));
+    hasImagingData.set(
+        featureList.getRawDataFiles().stream().anyMatch(ImagingRawDataFile.class::isInstance));
+    hasPseudoSpectra.set(
+        featureList.streamFeatures().map(ModularFeature::getMostIntenseFragmentScan)
+            .anyMatch(PseudoSpectrum.class::isInstance));
   }
 
   private void initIdentitiesMenu() {
@@ -324,6 +344,7 @@ public class FeatureTableContextMenu extends ContextMenu {
     exportImageToCsv.setOnAction(
         e -> ImageToCsvExportModule.showExportDialog(selectedRows, Instant.now()));
 
+    exportImageToCsv.visibleProperty().bind(hasImagingData);
     // export menu
     exportMenu.getItems()
         .addAll(exportIsotopesItem, exportMSMSItem, exportToSirius, new SeparatorMenuItem(),
@@ -407,14 +428,14 @@ public class FeatureTableContextMenu extends ContextMenu {
             selectedFeature != null ? selectedFeature.getRawDataFile() : null));
 
     final MenuItem showIMSFeatureItem = new ConditionalMenuItem("Ion mobility trace",
-        () -> !selectedRows.isEmpty() && selectedFeature != null
-            && selectedFeature.getRawDataFile() instanceof IMSRawDataFile);
+        () -> !selectedRows.isEmpty() && selectedOrBestFeature != null
+            && selectedOrBestFeature.getRawDataFile() instanceof IMSRawDataFile);
     showIMSFeatureItem.setOnAction(
-        e -> MZmineCore.getDesktop().addTab(new IMSFeatureVisualizerTab(selectedFeature)));
+        e -> MZmineCore.getDesktop().addTab(new IMSFeatureVisualizerTab(selectedOrBestFeature)));
 
     final MenuItem showImageFeatureItem = new ConditionalMenuItem("Image",
-        () -> !selectedRows.isEmpty() && selectedFeature != null
-            && selectedFeature.getRawDataFile() instanceof ImagingRawDataFile);
+        () -> !selectedRows.isEmpty() && selectedOrBestFeature != null
+            && selectedOrBestFeature.getRawDataFile() instanceof ImagingRawDataFile);
     showImageFeatureItem.setOnAction(e -> {
       ImageVisualizerParameters params = (ImageVisualizerParameters) MZmineCore.getConfiguration()
           .getModuleParameters(ImageVisualizerModule.class).cloneParameterSet();
@@ -422,85 +443,84 @@ public class FeatureTableContextMenu extends ContextMenu {
           MZmineCore.getConfiguration().getImageNormalization());
       params.setParameter(ImageVisualizerParameters.imageTransformation,
           MZmineCore.getConfiguration().getImageTransformation());// same as in feature table.
-      MZmineCore.getDesktop().addTab(new ImageVisualizerTab(selectedFeature, params));
+      MZmineCore.getDesktop().addTab(new ImageVisualizerTab(selectedOrBestFeature, params));
     });
 
     //TODO find better solution to check if single feature list row has co-located images
     final MenuItem showCorrelatedImageFeaturesItem = new ConditionalMenuItem("Co-located images",
-        () -> {
-          return (!selectedRows.isEmpty() && selectedFeature != null
-              && selectedFeature.getRawDataFile() instanceof ImagingRawDataFile
-              && selectedRowHasCorrelationData());
-        });
+        () -> (!selectedRows.isEmpty() && selectedOrBestFeature != null
+            && selectedOrBestFeature.getRawDataFile() instanceof ImagingRawDataFile
+            && selectedRowHasCorrelationData()));
     showCorrelatedImageFeaturesItem.setOnAction(e -> {
       showCorrelatedImageFeatures();
     });
 
     final MenuItem show2DItem = new ConditionalMenuItem("Feature in 2D",
         () -> !selectedRows.isEmpty());
-    show2DItem.setOnAction(e -> {
-      final ModularFeature feature = requireNonNullElse(selectedFeature,
-          selectedRow.getBestFeature());
-
-      TwoDVisualizerModule.show2DVisualizerSetupDialog(feature.getRawDataFile(),
-          feature.getRawDataPointsMZRange(), feature.getRawDataPointsRTRange());
-    });
+    show2DItem.setOnAction(e -> TwoDVisualizerModule.show2DVisualizerSetupDialog(
+        selectedOrBestFeature.getRawDataFile(), selectedOrBestFeature.getRawDataPointsMZRange(),
+        selectedOrBestFeature.getRawDataPointsRTRange()));
 
     final MenuItem show3DItem = new ConditionalMenuItem("Feature in 3D", () -> selectedRow != null);
     show3DItem.setOnAction(open3DFeaturePlot());
 
     final MenuItem showIntensityPlotItem = new ConditionalMenuItem(
-        "Plot using Intensity plot module",
-        () -> !selectedRows.isEmpty() && selectedFeature != null);
+        "Plot using Intensity plot module", () -> !selectedRows.isEmpty());
     showIntensityPlotItem.setOnAction(e -> IntensityPlotModule.showIntensityPlot(
-        ProjectService.getProjectManager().getCurrentProject(), selectedFeature.getFeatureList(),
+        ProjectService.getProjectManager().getCurrentProject(), selectedRow.getFeatureList(),
         selectedRows.toArray(new ModularFeatureListRow[0])));
 
     final MenuItem showInIMSRawDataOverviewItem = new ConditionalMenuItem(
-        "Show m/z ranges in IMS raw data overview",
-        () -> selectedFeature != null && selectedFeature.getRawDataFile() instanceof IMSRawDataFile
-            && !selectedFeatures.isEmpty());
+        "Show m/z ranges in IMS raw data overview", () -> selectedOrBestFeature != null
+        && selectedOrBestFeature.getRawDataFile() instanceof IMSRawDataFile);
     showInIMSRawDataOverviewItem.setOnAction(
         e -> IMSRawDataOverviewModule.openIMSVisualizerTabWithFeatures(
-            getFeaturesFromSelectedRaw(selectedFeatures)));
+            getSelectedOrBestFeaturesFromSameRaw()));
 
     final MenuItem showInMobilityMzVisualizerItem = new ConditionalMenuItem(
-        "Plot mobility/CCS vs. m/z", () -> !selectedRows.isEmpty());
+        "Plot mobility/CCS vs. m/z", () -> !selectedRows.isEmpty() && hasIonMobilityData.get());
     showInMobilityMzVisualizerItem.setOnAction(e -> {
       IMSMobilityMzPlotModule.visualizeFeaturesInNewTab(selectedRows, false);
     });
 
     final MenuItem showSpectrumItem = new ConditionalMenuItem("Mass spectrum",
-        () -> selectedFeature != null && selectedFeature.getRepresentativeScan() != null);
+        () -> selectedOrBestFeature != null
+            && selectedOrBestFeature.getRepresentativeScan() != null);
     showSpectrumItem.setOnAction(
-        e -> SpectraVisualizerModule.addNewSpectrumTab(selectedFeature.getRawDataFile(),
-            selectedFeature.getRepresentativeScan(), selectedFeature));
+        e -> SpectraVisualizerModule.addNewSpectrumTab(selectedOrBestFeature.getRawDataFile(),
+            selectedOrBestFeature.getRepresentativeScan(), selectedOrBestFeature));
 
     final MenuItem showFeatureFWHMMs1Item = new ConditionalMenuItem(
         "Accumulated mass spectrum (FWHM)",
-        () -> selectedFeature != null && selectedFeature.getFeatureData() != null);
+        () -> selectedOrBestFeature != null && selectedOrBestFeature.getFeatureData() != null);
     showFeatureFWHMMs1Item.setOnAction(e -> {
-      final Float fwhm = selectedFeature.getFWHM();
+      final List<Scan> scans;
+      final ModularFeature feature = selectedOrBestFeature;
+      final Float fwhm = feature.getFWHM();
       if (fwhm != null) {
-        final Range<Float> range = Range.closed(selectedFeature.getRT() - fwhm / 2,
-            selectedFeature.getRT() + fwhm / 2);
-        List<Scan> scans = (List<Scan>) selectedFeature.getFeatureData().getSpectra().stream()
+        final Range<Float> range = Range.closed(feature.getRT() - fwhm / 2,
+            feature.getRT() + fwhm / 2);
+        scans = (List<Scan>) feature.getFeatureData().getSpectra().stream()
             .filter(s -> range.contains(s.getRetentionTime())).toList();
-        MergedMassSpectrum spectrum = SpectraMerging.mergeSpectra(scans,
-            SpectraMerging.defaultMs1MergeTol, MergingType.ALL_ENERGIES, null);
-        SpectraVisualizerModule.addNewSpectrumTab(spectrum);
+      } else {
+        // in case no FWHM is present just merge all scans
+        scans = List.copyOf(feature.getFeatureData().getSpectra());
       }
+      MergedMassSpectrum spectrum = SpectraMerging.mergeSpectra(scans,
+          SpectraMerging.defaultMs1MergeTol, MergingType.ALL_ENERGIES, null);
+      SpectraVisualizerModule.addNewSpectrumTab(spectrum);
     });
 
     final MenuItem showBestMobilityScanItem = new ConditionalMenuItem("Best mobility scan",
-        () -> selectedFeature != null && selectedFeature.getRepresentativeScan() instanceof Frame
-            && selectedFeature.getFeatureData() instanceof IonMobilogramTimeSeries);
+        () -> selectedOrBestFeature != null
+            && selectedOrBestFeature.getRepresentativeScan() instanceof Frame
+            && selectedOrBestFeature.getFeatureData() instanceof IonMobilogramTimeSeries);
     showBestMobilityScanItem.setOnAction(e -> SpectraVisualizerModule.addNewSpectrumTab(
-        IonMobilityUtils.getBestMobilityScan(selectedFeature)));
+        IonMobilityUtils.getBestMobilityScan(selectedOrBestFeature)));
 
     final MenuItem extractSumSpectrumFromMobScans = new ConditionalMenuItem(
-        "Extract spectrum from mobility FWHM", () -> selectedFeature != null
-        && selectedFeature.getFeatureData() instanceof IonMobilogramTimeSeries);
+        "Extract spectrum from mobility FWHM", () -> selectedOrBestFeature != null
+        && selectedOrBestFeature.getFeatureData() instanceof IonMobilogramTimeSeries);
     extractSumSpectrumFromMobScans.setOnAction(e -> {
       Range<Float> fwhm = IonMobilityUtils.getMobilityFWHM(
           ((IonMobilogramTimeSeries) selectedFeature.getFeatureData()).getSummedMobilogram());
@@ -517,11 +537,11 @@ public class FeatureTableContextMenu extends ContextMenu {
     final MenuItem showMSMSItem = new ConditionalMenuItem("Most intense MS/MS",
         () -> (selectedRow != null && getNumberOfFeaturesWithFragmentScans(selectedRow) >= 1) || (
             selectedFeature != null && selectedFeature.getMostIntenseFragmentScan() != null) || (
-            selectedRows.size() > 1 && getNumberOfRowsWithFragmentScans(selectedRows) > 1));
+            selectedRows.size() > 1 && getNumberOfRowsWithFragmentScans(selectedRows) >= 1));
     showMSMSItem.setOnAction(e -> {
       if (selectedFeature != null && selectedFeature.getMostIntenseFragmentScan() != null) {
         SpectraVisualizerModule.addNewSpectrumTab(selectedFeature.getMostIntenseFragmentScan());
-      } else if (selectedRows.size() > 1 && getNumberOfRowsWithFragmentScans(selectedRows) > 1) {
+      } else if (selectedRows.size() > 1 && getNumberOfRowsWithFragmentScans(selectedRows) >= 1) {
         SpectraStackVisualizerModule.addMsMsStackVisualizer(selectedRows,
             table.getFeatureList().getRawDataFiles(), selectedRows.get(0).getRawDataFiles().get(0));
       } else if (selectedRow != null && selectedRow.getMostIntenseFragmentScan() != null) {
@@ -530,15 +550,15 @@ public class FeatureTableContextMenu extends ContextMenu {
     });
 
     final MenuItem showPseudoSpectrumItem = new ConditionalMenuItem("Show Pseudo Spectrum",
-        () -> selectedFeature != null
-            && selectedFeature.getMostIntenseFragmentScan() instanceof PseudoSpectrum);
+        () -> selectedOrBestFeature != null
+            && selectedOrBestFeature.getMostIntenseFragmentScan() instanceof PseudoSpectrum);
     showPseudoSpectrumItem.setOnAction(e -> showPseudoSpectrum());
 
     final MenuItem showDiaMirror = new ConditionalMenuItem(
-        "DIA spectral mirror: Correlated-to-all signals",
-        () -> selectedFeature != null && selectedFeature.getRawDataFile() instanceof IMSRawDataFile
-            && selectedFeature.getFeatureData() instanceof IonMobilogramTimeSeries
-            && selectedFeature.getMostIntenseFragmentScan() instanceof PseudoSpectrum);
+        "DIA spectral mirror: Correlated-to-all signals", () -> selectedOrBestFeature != null
+        && selectedOrBestFeature.getRawDataFile() instanceof IMSRawDataFile
+        && selectedOrBestFeature.getFeatureData() instanceof IonMobilogramTimeSeries
+        && selectedOrBestFeature.getMostIntenseFragmentScan() instanceof PseudoSpectrum);
     showDiaMirror.setOnAction(e -> showDiaMirror());
 
     final MenuItem showMSMSMirrorItem = new ConditionalMenuItem("Spectral mirror (2 rows)",
@@ -581,8 +601,20 @@ public class FeatureTableContextMenu extends ContextMenu {
       }
     });
 
-    final MenuItem showPeakRowSummaryItem = new ConditionalMenuItem("Row(s) summary", () ->
-        /* !selectedRows.isEmpty() */ false); // todo, not implemented yet
+//    final MenuItem showPeakRowSummaryItem = new ConditionalMenuItem("Row(s) summary", () ->
+//        /* !selectedRows.isEmpty() */ false); // todo, not implemented yet
+
+    showIMSFeatureItem.visibleProperty().bind(hasIonMobilityData);
+    showInIMSRawDataOverviewItem.visibleProperty().bind(hasIonMobilityData);
+    showInMobilityMzVisualizerItem.visibleProperty().bind(hasIonMobilityData);
+    showBestMobilityScanItem.visibleProperty().bind(hasIonMobilityData);
+    extractSumSpectrumFromMobScans.visibleProperty().bind(hasIonMobilityData);
+
+    showImageFeatureItem.visibleProperty().bind(hasImagingData);
+    showCorrelatedImageFeaturesItem.visibleProperty().bind(hasImagingData);
+    showDiaMirror.visibleProperty().bind(hasImagingData);
+
+    showPseudoSpectrumItem.visibleProperty().bind(hasPseudoSpectra);
 
     showMenu.getItems()
         .addAll(showXICItem, showXICSetupItem, showIMSFeatureItem, showImageFeatureItem,
@@ -593,7 +625,7 @@ public class FeatureTableContextMenu extends ContextMenu {
             showMSMSMirrorItem, showAllMSMSItem, showPseudoSpectrumItem, showDiaMirror,
             new SeparatorMenuItem(), showIsotopePatternItem, showCompoundDBResults,
             showSpectralDBResults, showMatchedLipidSignals, new SeparatorMenuItem(),
-            showPeakRowSummaryItem, showCorrelatedImageFeaturesItem);
+            showCorrelatedImageFeaturesItem);
   }
 
   private @NotNull EventHandler<ActionEvent> open3DFeaturePlot() {
@@ -698,6 +730,10 @@ public class FeatureTableContextMenu extends ContextMenu {
     selectedRows = table.getSelectedRows();
     selectedFeature = table.getSelectedFeature();
     selectedRow = table.getSelectedRow();
+    selectedOrBestFeature = selectedFeature;
+    if (selectedOrBestFeature == null && selectedRow != null) {
+      selectedOrBestFeature = selectedRow.getBestFeature();
+    }
 
     // for single-raw-file-feature-lists it's intuitive to be able to click on the row columns, too
     if (selectedFeature == null && selectedRows.size() == 1
@@ -781,19 +817,27 @@ public class FeatureTableContextMenu extends ContextMenu {
   }
 
   @NotNull
-  private List<ModularFeature> getFeaturesFromSelectedRaw(Collection<ModularFeature> features) {
-    if (selectedFeature == null || selectedFeature.getRawDataFile() == null) {
-      return Collections.emptyList();
+  private List<Feature> getSelectedOrBestFeaturesFromSameRaw() {
+    final RawDataFile file;
+    if (selectedFeature != null && selectedFeature.getRawDataFile() != null) {
+      file = selectedFeature.getRawDataFile();
+    } else if (selectedRow != null) {
+      file = selectedRow.getBestFeature().getRawDataFile();
+    } else {
+      return List.of();
     }
-    final RawDataFile file = selectedFeature.getRawDataFile();
-    return features.stream().filter(f -> f.getRawDataFile() == file).collect(Collectors.toList());
+    if (!(file instanceof IMSRawDataFile)) {
+      return List.of();
+    }
+    return selectedRows.stream().map(row -> (Feature) row.getFeature(file)).filter(Objects::nonNull)
+        .toList();
   }
 
   private void showPseudoSpectrum() {
-    if (selectedFeature != null) {
+    if (selectedOrBestFeature != null) {
       PseudoSpectrumVisualizerPane pseudoSpectrumVisualizerPane = new PseudoSpectrumVisualizerPane(
-          selectedFeature, null);
-      SimpleTab simpleTab = new SimpleTab("Pseudo Spectrum of " + selectedFeature.toString(),
+          selectedOrBestFeature, null);
+      SimpleTab simpleTab = new SimpleTab("Pseudo Spectrum of " + selectedOrBestFeature.toString(),
           pseudoSpectrumVisualizerPane);
       MZmineCore.getDesktop().addTab(simpleTab);
     }
@@ -810,6 +854,10 @@ public class FeatureTableContextMenu extends ContextMenu {
   }
 
   private void showDiaMirror() {
+    final ModularFeature selectedFeature = selectedOrBestFeature;
+    if (selectedFeature == null) {
+      return;
+    }
     final Scan msms = selectedFeature.getMostIntenseFragmentScan();
     final RawDataFile file = selectedFeature.getRawDataFile();
 
